--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,10 +1,3 @@
-/*
-    Theme Name: WeBuild
-    Theme URL: https://bootstrapmade.com/free-bootstrap-coming-soon-template-countdwon/
-    Author: BootstrapMade
-    Author URL: https://bootstrapmade.com
-*/
-/* ==== Google font ==== */
 @import url('https://fonts.googleapis.com/css?family=Lato:400,300,700,900');
  html,body { height: 100%; margin: 0px; padding: 0px; }
 body {
@@ -200,4 +193,9 @@ p.copyright {
 
 .credits, .credits a {
     color: #fff;
+}
+@media only screen and (max-width: 500px) {
+    #wrapper h1 {
+        padding: 0 0 0 120px;
+    }
 }
