--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@ body {
     -webkit-overflow-scrolling: touch;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2 {
     font-family: 'Lato', sans-serif;
     font-weight: 300;
     color: #444;
@@ -20,21 +20,6 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
 	font-size: 40px;
 }
-
-h3 {
-	font-weight: 400;
-}
-
-h4 {
-	font-weight: 400;
-	font-size: 20px;
-}
-
-p {
-    margin-bottom: 20px;
-    font-size: 16px;
-}
-
 
 a {
     color: #ACBAC1;
@@ -61,64 +46,6 @@ a:after {
     -o-transition: color 0.1s ease-in, background 0.1s ease-in;
     transition: color 0.1s ease-in, background 0.1s ease-in;
 }
-
-.alignleft {
-    text-align: left;
-}
-.alignright {
-    text-align: right;
-}
-
-.aligncenter {
-    text-align: center;
-}
-
-.btn {
-  display: inline-block;
-  padding: 10px 20px;
-  margin-bottom: 0;
-  font-size: 14px;
-  font-weight: normal;
-  line-height: 1.428571429;
-  text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  cursor: pointer;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-       -o-user-select: none;
-          user-select: none;
-  background-image: none;
-  border: 1px solid transparent;
-  border-radius: 0;
-}
-
-.btn-theme  {
-  color: #fff;
-  background-color: #4F92AF;
-  border-color: #4F92AF;
-  transition: background 0.3s;
-}
-.btn-theme:hover  {
-  color: #fff;
-  background-color: #5cacce;
-  border-color: #5cacce;
-}
-form.signup input  {
-	height: 42px;
-	width: 250px !important;
-	border-radius: 0;
-	border: none;
-}
-form.signup button.btn {
-	font-weight: 700;
-}
-form.signup input.form-control:focus {
-	border-color: #fd680e;
-}
-
-
 /* wrapper */
 
 #wrapper {
@@ -166,9 +93,6 @@ h2.subtitle {
 }
 
 /* social */
-.social {
-    /*padding: 30px 0 0 0;*/
-}
 
 .social a {
     font-size: 24px;
