--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,7 +89,7 @@ a:after {
 h2.subtitle {
 	color: #fff;
 	font-size: 24px;
-    margin-top: 45px;
+    margin-top: 38px;
 }
 
 /* social */
@@ -110,7 +110,7 @@ h2.subtitle {
 	font-size: 48px;
 	color: #fff;
 	line-height: 1.1em;
-	margin: 20px 0 60px;
+	margin: 20px 0 48px 0;
 }
 
 
